add_executable(1-1 Assignment1/1-1.c)
add_executable(1-2 Assignment1/1-2.c)
add_executable(1-3 Assignment1/1-3.c)
add_executable(1-4 Assignment1/1-4.c)
add_executable(2-1 Assignment2/2-1.c)
add_executable(2-2 Assignment2/2-2.c)
add_executable(2-3 Assignment2/2-3.c)
add_executable(3-1 Assignment3/3-1.c)
add_executable(3-2 Assignment3/3-2.c)
add_executable(4-1 Assignment4/4-1.c)
add_executable(goto misc/goto.c)
add_executable(4-2 Assignment4/4-2.c)
add_executable(4-3 Assignment4/4-3.c)
add_executable(4-4 Assignment4/4-4.c)
add_executable(m8 midterm/midNum8.c)
add_executable(assignment1 midterm/assignment1.c)
add_executable(goto midterm/gotoProblem.c)